--- a/search/index.html
+++ b/search/index.html
@@ -4,15 +4,15 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="">
 <title>搜索</title>
 
-<link rel='canonical' href='https://web.yuzia.fun/person-blog/search/'>
+<link rel='canonical' href='https://yuzi6.github.io/person-blog/search/'>
 
 <link rel="stylesheet" href="/person-blog/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="搜索">
 <meta property='og:description' content="">
-<meta property='og:url' content='https://web.yuzia.fun/person-blog/search/'>
+<meta property='og:url' content='https://yuzi6.github.io/person-blog/search/'>
 <meta property='og:site_name' content='Yuzi-ska'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://web.yuzia.fun/person-blog/search/index.json"><link rel="preload" href="/person-blog/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://yuzi6.github.io/person-blog/search/index.json"><link rel="preload" href="/person-blog/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
