change title and website

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {font-family: LXGW WenKai Screen;}
             
                 <li>
                     <a 
-                        href='https://github.com/yuzi6'
+                        href='https://github.com/yuzi-ska'
                         target="_blank"
                         title="GitHub"
                         rel="me"
