change website title

--- a/404.html
+++ b/404.html
@@ -263,7 +263,7 @@ body {font-family: LXGW WenKai Screen;}
     <section class="copyright">
         &copy; 
         
-        2025 Example Person
+        2025 Yuzi_ska Blog
     </section>
     
     <section class="powerby">
