--- a/关于/index.html
+++ b/关于/index.html
@@ -282,6 +282,7 @@ body {font-family: LXGW WenKai Screen;}
     <li><a href="#联系地址"><strong>联系地址</strong></a></li>
     <li><a href="#我的旅行记录">我的旅行记录</a></li>
     <li><a href="#我的音乐">我的音乐</a></li>
+    <li><a href="#网站使用方案">网站使用方案</a></li>
   </ol>
 </nav>
         </div>
@@ -371,6 +372,13 @@ body {font-family: LXGW WenKai Screen;}
 </h2><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1-GJy5UJ9qab5ruxRFNESeRcLWvcE-0o&ehbc=2E312F" width="1000" height="600"></iframe>
 <h2 id="我的音乐">我的音乐
 </h2><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=510 height=300 src="//music.163.com/outchain/player?type=0&id=2394586983&auto=0&height=430"></iframe>
+<h2 id="网站使用方案">网站使用方案
+</h2><ul>
+<li>家用Nas + Wordpress（会有一个端口号，弃用）</li>
+<li>轻量级服务器 + Wordpress（太贵，服务器带宽也小，弃用）</li>
+<li>Hugo + GitHub page （单GitHub page国内加载图片太慢，改用Hugo原因是Wordpress太臃肿了qwq）</li>
+<li>Hugo + GitHub page + OSS图床 （目前使用）</li>
+</ul>
 
 </section>
 
