--- a/服务/index.html
+++ b/服务/index.html
@@ -87,7 +87,7 @@ body {font-family: LXGW WenKai Screen;}
             
                 <li>
                     <a 
-                        href='https://skana.cn:5255'
+                        href='https://yun.skana.cn'
                         target="_blank"
                         title="alist"
                         rel="me"
