--- a/关于/index.html
+++ b/关于/index.html
@@ -358,7 +358,7 @@ body {font-family: LXGW WenKai Screen;}
     
     
     <h2 id="联系地址"><strong>联系地址</strong>
-</h2><p><strong><a class="link" href="mailto:yuzi@skana.cn" >🍔邮箱</a></strong></p>
+</h2><p><strong><a class="link" href="mailto:yuzi@skana.cn" >📧邮箱</a></strong></p>
 <h2 id="我喜欢的音乐">我喜欢的音乐
 </h2><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=510 height=300 src="//music.163.com/outchain/player?type=0&id=2394586983&auto=0&height=430"></iframe>
 <p>网站使用的是<a class="link" href="https://gohugo.io/"  target="_blank" rel="noopener"
