add bilibili block

--- a/p/bilibili-block/index.html
+++ b/p/bilibili-block/index.html
@@ -354,9 +354,9 @@ body {font-family: LXGW WenKai Screen;}
 <h1 id="使用与下载">使用与下载
 </h1><p>前往bilibili网页端屏蔽设定选项右键导入json文件即可</p>
 <p>下载地址：</p>
-<p><a class="link" href="https://drive.google.com/file/d/1ScVgDU4Hjfes3G-UTek-u6CICdVmXJqd/view?usp=sharing"  target="_blank" rel="noopener"
+<p><a class="link" href="https://drive.google.com/file/d/1ScVgDU4Hjfes3G-UTek-u6CICdVmXJqd/view?usp=drive_link"  target="_blank" rel="noopener"
     >Google云盘</a></p>
-<p><a class="link" href="https://wway.lanzoue.com/iG0Uy2wgcz1e"  target="_blank" rel="noopener"
+<p><a class="link" href="https://wway.lanzoue.com/i5FO2303bgnc"  target="_blank" rel="noopener"
     >蓝奏云</a></p>
 
 </section>
