fix kms address

--- a/p/kms/index.html
+++ b/p/kms/index.html
@@ -431,7 +431,7 @@ body {font-family: LXGW WenKai Screen;}
     <h1 id="kms">KMS
 </h1><p>KMS 激活服务，slmgr 命令激活 Windows 系统、Office</p>
 <h2 id="服务地址">服务地址
-</h2><p><strong><a class="link" href="http://kms.skana.cn"  target="_blank" rel="noopener"
+</h2><p><strong><a class="link" href="https://yuzia.fun/p/kms/"  target="_blank" rel="noopener"
     >kms.skana.cn</a></strong></p>
 <h3 id="激活步骤管理员命令执行">激活步骤（管理员命令执行）
 </h3><ol>
