--- a/search/index.html
+++ b/search/index.html
@@ -4,15 +4,15 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="">
 <title>搜索</title>
 
-<link rel='canonical' href='https://yuzia.fun/search/'>
+<link rel='canonical' href='https://yuzia.cc/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="搜索">
 <meta property='og:description' content="">
-<meta property='og:url' content='https://yuzia.fun/search/'>
+<meta property='og:url' content='https://yuzia.cc/search/'>
 <meta property='og:site_name' content='Yuzi_ska'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://yuzia.fun/search/index.json">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://yuzia.cc/search/index.json">
     <link rel="shortcut icon" href="/favicon.ico" />
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-web/style.css" />
