--- a/关于/index.html
+++ b/关于/index.html
@@ -4,11 +4,11 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="Hello，这是关于我的简介，喜欢折腾与研究新事物。">
 <title>关于</title>
 
-<link rel='canonical' href='https://yuzia.fun/%E5%85%B3%E4%BA%8E/'>
+<link rel='canonical' href='https://yuzia.cc/%E5%85%B3%E4%BA%8E/'>
 
 <link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="关于">
 <meta property='og:description' content="Hello，这是关于我的简介，喜欢折腾与研究新事物。">
-<meta property='og:url' content='https://yuzia.fun/%E5%85%B3%E4%BA%8E/'>
+<meta property='og:url' content='https://yuzia.cc/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='Yuzi_ska'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' /><meta property='og:image' content='https://image-yuzi.oss-cn-shanghai.aliyuncs.com/img/1740205813596.jpeg' />
 <meta name="twitter:title" content="关于">
