--- a/服务/index.html
+++ b/服务/index.html
@@ -4,11 +4,11 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="">
 <title>服务</title>
 
-<link rel='canonical' href='https://yuzia.fun/%E6%9C%8D%E5%8A%A1/'>
+<link rel='canonical' href='https://yuzia.cc/%E6%9C%8D%E5%8A%A1/'>
 
 <link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="服务">
 <meta property='og:description' content="">
-<meta property='og:url' content='https://yuzia.fun/%E6%9C%8D%E5%8A%A1/'>
+<meta property='og:url' content='https://yuzia.cc/%E6%9C%8D%E5%8A%A1/'>
 <meta property='og:site_name' content='Yuzi_ska'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="服务">
