fix img address

--- a/关于/index.html
+++ b/关于/index.html
@@ -10,10 +10,10 @@
 <meta property='og:description' content="Hello，这是关于我的简介，喜欢折腾与研究新事物。">
 <meta property='og:url' content='https://yuzia.cc/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='Yuzi_ska'>
-<meta property='og:type' content='article'><meta property='article:section' content='Page' /><meta property='og:image' content='https://image-yuzi.oss-cn-shanghai.aliyuncs.com/img/1740205813596.jpeg' />
+<meta property='og:type' content='article'><meta property='article:section' content='Page' /><meta property='og:image' content='https://img.skana.cn/img/1740205813596.jpeg' />
 <meta name="twitter:title" content="关于">
 <meta name="twitter:description" content="Hello，这是关于我的简介，喜欢折腾与研究新事物。"><meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content='https://image-yuzi.oss-cn-shanghai.aliyuncs.com/img/1740205813596.jpeg' />
+    <meta name="twitter:image" content='https://img.skana.cn/img/1740205813596.jpeg' />
     <link rel="shortcut icon" href="/favicon.ico" />
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-web/style.css" />
@@ -303,7 +303,7 @@ body {font-family: LXGW WenKai Screen;}
         <div class="article-image">
             <a href="/%E5%85%B3%E4%BA%8E/">
                 
-                    <img src="https://image-yuzi.oss-cn-shanghai.aliyuncs.com/img/1740205813596.jpeg" loading="lazy" alt="Featured image of post 关于" />
+                    <img src="https://img.skana.cn/img/1740205813596.jpeg" loading="lazy" alt="Featured image of post 关于" />
                 
             </a>
         </div>
