fix image domian

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ body {font-family: LXGW WenKai Screen;}
         <div class="article-image">
             <a href="/p/bilibili-block/">
                 
-                    <img src="https://image-yuzi.oss-cn-shanghai.aliyuncs.com/img/1740150509512.png" loading="lazy" alt="Featured image of post bilibili屏蔽提示词分享" />
+                    <img src="https://img.skana.cn/img/1740150509512.png" loading="lazy" alt="Featured image of post bilibili屏蔽提示词分享" />
                 
             </a>
         </div>
