update neko count

--- a/关于/index.html
+++ b/关于/index.html
@@ -365,6 +365,14 @@ body {font-family: LXGW WenKai Screen;}
     >Hugo</a>+<a class="link" href="https://github.com/"  target="_blank" rel="noopener"
     >Github page</a>+图床,主题是Jimmy的<a class="link" href="https://github.com/CaiJimmy/hugo-theme-stack"  target="_blank" rel="noopener"
     >hugo-theme-stack</a>。</p>
+<p><img src="https://count.getloli.com/@Yuzi_ska?name=Yuzi_ska&amp;theme=moebooru&amp;padding=8&amp;offset=0&amp;align=top&amp;scale=1&amp;pixelated=1&amp;darkmode=auto"
+	
+	
+	
+	loading="lazy"
+	
+	
+></p>
 
 </section>
 
