--- a/p/bilibili-block/index.html
+++ b/p/bilibili-block/index.html
@@ -350,7 +350,7 @@ body {font-family: LXGW WenKai Screen;}
 </h1><p>个人觉得目前bilibili的弹幕太多无意义弹幕太多，有一大堆引战、刷屏的弹幕，实际观感很差，官方又下架了弹幕屏蔽功能，因此添加了一大堆目前发送比较多的弹幕进行屏蔽，内容可以根据个人需求更改，后续会不定时更新。</p>
 <p>以下是大致预览图：</p>
 <img src="https://img.skana.cn/img/_2025-05-17_10-53-11.png" alt="_2025-05-17_10-53-11" style="zoom: 80%;" />
-<img src="img.skana.cn/img/_2025-05-17_10-54-27.png" alt="_2025-05-17_10-54-27" style="zoom: 80%;" />
+<img src="https://img.skana.cn/img/_2025-05-17_10-54-27.png" alt="_2025-05-17_10-54-27" style="zoom: 80%;" />
 <h1 id="使用与下载">使用与下载
 </h1><p>前往bilibili网页端屏蔽设定选项右键导入json文件即可</p>
 <p>下载地址：</p>
