--- a/p/xai-sign/index.html
+++ b/p/xai-sign/index.html
@@ -516,7 +516,7 @@ body {font-family: LXGW WenKai Screen;}
         
 
         <div class="article-details">
-            <h2 class="article-title">使用KMS免费激活Windows</h2>
+            <h2 class="article-title">KMS免费激活Windows</h2>
         </div>
     </a>
 </article>
