--- a/search/index.html
+++ b/search/index.html
@@ -23,7 +23,10 @@
 *{font-weight:Regular}
 body {font-family: LXGW WenKai Screen;}
 </style>
-<link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> <link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
