--- a/p/ollama/index.html
+++ b/p/ollama/index.html
@@ -6,7 +6,9 @@
 
 <link rel='canonical' href='https://yuzia.cc/p/ollama/'>
 
-<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="使用Ollama部署Ai模型">
+<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> <meta property='og:title' content="使用Ollama部署Ai模型">
 <meta property='og:description' content="简单部署使用ollama">
 <meta property='og:url' content='https://yuzia.cc/p/ollama/'>
 <meta property='og:site_name' content='Yuzi_ska'>
@@ -26,8 +28,6 @@ body {font-family: LXGW WenKai Screen;}
 </style>
 
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> 
     </head>
     <body class="
     article-page
