--- a/p/pythonbook/index.html
+++ b/p/pythonbook/index.html
@@ -6,7 +6,9 @@
 
 <link rel='canonical' href='https://yuzia.cc/p/pythonbook/'>
 
-<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="有关Python的书籍整理">
+<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> <meta property='og:title' content="有关Python的书籍整理">
 <meta property='og:description' content="统计一下网上和自己对于Python系列书籍的推荐给初学者以及想要进阶的给一个参考">
 <meta property='og:url' content='https://yuzia.cc/p/pythonbook/'>
 <meta property='og:site_name' content='Yuzi_ska'>
@@ -26,8 +28,6 @@ body {font-family: LXGW WenKai Screen;}
 </style>
 
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> 
     </head>
     <body class="
     article-page
