--- a/p/xai-sign/index.html
+++ b/p/xai-sign/index.html
@@ -6,7 +6,9 @@
 
 <link rel='canonical' href='https://yuzia.cc/p/xai-sign/'>
 
-<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="xAI注册与使用">
+<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> <meta property='og:title' content="xAI注册与使用">
 <meta property='og:description' content="入口与注册 点击此处xAI进入注册入口\n可以使用QQ邮箱进行注册，如果有X账号或者谷歌账号直接登入即可。\n如果选择注册，那么会跳出邮箱认证界面。\n在注册的邮箱内认证即可。\n">
 <meta property='og:url' content='https://yuzia.cc/p/xai-sign/'>
 <meta property='og:site_name' content='Yuzi_ska'>
@@ -26,8 +28,6 @@ body {font-family: LXGW WenKai Screen;}
 </style>
 
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> 
     </head>
     <body class="
     article-page
