--- a/p/bilibili-block/index.html
+++ b/p/bilibili-block/index.html
@@ -6,9 +6,7 @@
 
 <link rel='canonical' href='https://yuzia.cc/p/bilibili-block/'>
 
-<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> <meta property='og:title' content="bilibili屏蔽提示词分享">
+<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="bilibili屏蔽提示词分享">
 <meta property='og:description' content="处理目前大多数无意义弹幕">
 <meta property='og:url' content='https://yuzia.cc/p/bilibili-block/'>
 <meta property='og:site_name' content='Yuzi_ska'>
@@ -28,6 +26,8 @@ body {font-family: LXGW WenKai Screen;}
 </style>
 
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> 
     </head>
     <body class="
     article-page
