--- a/search/index.html
+++ b/search/index.html
@@ -6,9 +6,7 @@
 
 <link rel='canonical' href='https://yuzia.cc/search/'>
 
-<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> <meta property='og:title' content="搜索">
+<link rel="stylesheet" href="/scss/style.min.b82bf1f02c6a3bf1838229788292274e1766e06d55a9174e5b82208c801ce67b.css"><meta property='og:title' content="搜索">
 <meta property='og:description' content="">
 <meta property='og:url' content='https://yuzia.cc/search/'>
 <meta property='og:site_name' content='Yuzi_ska'>
@@ -26,7 +24,9 @@
 body {font-family: LXGW WenKai Screen;}
 </style>
 
-<link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
+     crossorigin="anonymous"></script> <link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
