--- a/search/index.html
+++ b/search/index.html
@@ -22,11 +22,7 @@
 *{font-family:LXGW WenKai Screen}
 *{font-weight:Regular}
 body {font-family: LXGW WenKai Screen;}
-</style>
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2377749635716111"
-     crossorigin="anonymous"></script> <link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
+</style><link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
