--- a/p/nc-domain-dns-error/index.html
+++ b/p/nc-domain-dns-error/index.html
@@ -454,7 +454,7 @@ body {font-family: LXGW WenKai Screen;}
         
 
         <div class="article-details">
-            <h2 class="article-title">KMS免费激活Windows</h2>
+            <h2 class="article-title">Yuzi_ska-KMS公共服务器</h2>
         </div>
     </a>
 </article>
